# coreutils-in-rust

./: .gitignore  Cargo.toml  LICENSE  NOTES.md  README.md  fizzbuzz.rs  rat
examples/: cat.rs  raii.rs
notes/: cat_valgrind.txt
src/: main.rs
