[package]
name = "ratiscat"
version = "0.4"
edition = "2021"
authors = ["xstaticxgpx"]
license = "MIT"
description = "rat is cat reimplemented in rust with some new features"
homepage = "https://github.com/xstaticxgpx/ratiscat"
repository = "https://github.com/xstaticxgpx/ratiscat"
readme = "README.md"
keywords = ["coreutils", "cross-platform", "cli", "utility"]
categories = ["command-line-utilities"]
exclude = [".gitignore", "img/", "/NOTES.md", "/rat"]

rust-version = "1.71.0"

default-run = "rat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(unix)'.dependencies]
#anyhow = "1.0"
libc = "0.2"
nix = "0.26"
clap = { version = "4.0", features = ["derive"] }

[profile.release-lto]
inherits = "release"
lto = true
